# boostwatch

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
boostwatch/: __init__.py
boostwatch/analysis/: feature_stats.py  tree_analysis.py
boostwatch/core/: base.py  log_schema.py  observer.py
boostwatch/integrations/: __init__.py  catboost.py  lightgbm.py  ngboost.py  sklearn_gbt.py  xgboost.py
boostwatch/utils/: gpu_utils.py  helpers.py
boostwatch/viz/: _helpers.py  charts.py  data_export.py  plotting.py  report.py  themes.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
examples/: adult_census_income.ipynb  basic_usage.py  california_housing.ipynb  forest_covertype.ipynb
examples/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
examples/catboost_info/learn/: events.out.tfevents
examples/catboost_info/test/: events.out.tfevents
