[project]
name = "boostwatch"
version = "0.2.0"
description = "Training-time observability for gradient boosting models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=3.0.0"]
xgboost  = ["xgboost>=1.5.0"]
catboost = ["catboost>=1.0.0"]
ngboost  = ["ngboost>=0.3.0"]
all      = ["lightgbm>=3.0.0", "xgboost>=1.5.0", "catboost>=1.0.0", "ngboost>=0.3.0"]
dev      = ["pytest>=7.0", "jupyter>=1.0", "ipykernel>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
